fixing ghost bug, adding shop icon mobile

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -7,18 +7,8 @@
   margin: 0 auto;
 }
 
-.game-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  margin-top: 20px;
-}
 
-.battlefield-container {
-  flex-grow: 1;
-  margin: 0 20px;
-  /* Add margin to separate from buttons and log */
-}
+
 
 .battlefield {
   display: flex;
